[gd_scene load_steps=8 format=2]

[ext_resource path="res://lobby.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Minecraftia-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui-theme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 8
outline_size = 1
outline_color = Color( 0.129412, 0.121569, 0.121569, 1 )
extra_spacing_top = 2
font_data = ExtResource( 2 )

[sub_resource type="ButtonGroup" id=2]

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0.129412, 0.121569, 0.121569, 1 )
extra_spacing_top = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 8
outline_size = 1
outline_color = Color( 0.129412, 0.121569, 0.121569, 1 )
extra_spacing_top = 2
font_data = ExtResource( 2 )

[node name="Lobby" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Players" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.0
margin_top = -155.0
margin_right = 126.0
margin_bottom = 155.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Players"]
margin_left = 26.0
margin_top = 18.0
margin_right = 142.0
margin_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "Aguardando jogadores..."

[node name="Start" type="Button" parent="Players"]
margin_left = 62.0
margin_top = 238.0
margin_right = 187.0
margin_bottom = 267.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "JOGAR!"

[node name="List" type="ItemList" parent="Players"]
margin_left = 25.0
margin_top = 37.0
margin_right = 229.0
margin_bottom = 221.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortForward" type="Label" parent="Players"]
anchor_top = -0.00215297
anchor_bottom = -0.00215297
margin_left = -124.0
margin_top = 375.0
margin_right = 128.0
margin_bottom = 429.0
custom_constants/line_spacing = 6
text = "Para permitir conexões fora da LAN, 
If you want non-LAN clients to connect,
make sure the port 5252 in UDP
is forwarded on your router."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FindPublicIP" type="LineEdit" parent="Players"]
margin_left = 123.0
margin_top = 279.0
margin_right = 189.0
margin_bottom = 302.0
hint_tooltip = "Envie este IP para o outro jogador"
mouse_filter = 1
theme = ExtResource( 3 )
text = "192.168.0.1"
editable = false
expand_to_text_length = true
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPIndication" type="Label" parent="Players"]
margin_left = 75.0
margin_top = 279.0
margin_right = 115.0
margin_bottom = 303.0
theme = ExtResource( 3 )
text = "Seu IP é:"
valign = 1

[node name="Connect" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -164.0
margin_top = -116.0
margin_right = 164.0
margin_bottom = 116.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Connect"]
margin_left = 20.0
margin_top = 32.0
margin_right = 62.0
margin_bottom = 52.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "Nome:"

[node name="Name" type="LineEdit" parent="Connect"]
margin_left = 20.0
margin_top = 56.0
margin_right = 176.0
margin_bottom = 86.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "Jogador 1"
caret_blink = true
caret_blink_speed = 0.5

[node name="IPLabel" type="Label" parent="Connect"]
margin_left = 20.0
margin_top = 136.0
margin_right = 62.0
margin_bottom = 156.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "IP:"

[node name="IPAddress" type="LineEdit" parent="Connect"]
margin_left = 20.0
margin_top = 152.0
margin_right = 176.0
margin_bottom = 182.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "127.0.0.1"
caret_blink = true
caret_blink_speed = 0.5

[node name="Host" type="Button" parent="Connect"]
margin_left = 180.0
margin_top = 58.0
margin_right = 314.0
margin_bottom = 84.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "Criar partida"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="Connect"]
margin_left = 180.0
margin_top = 154.0
margin_right = 320.0
margin_bottom = 180.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "Entrar em partida"

[node name="ErrorLabel" type="Label" parent="Connect"]
margin_left = 44.0
margin_top = 200.0
margin_right = 286.0
margin_bottom = 214.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GhostCheck" type="CheckBox" parent="Connect"]
margin_left = 20.0
margin_top = 88.0
margin_right = 109.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 1 )
pressed = true
group = SubResource( 2 )
text = "Fantasma"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MariaCheck" type="CheckBox" parent="Connect"]
margin_left = 108.0
margin_top = 88.0
margin_right = 240.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 1 )
group = SubResource( 2 )
text = "Maria (Caçadora)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocalCheck" type="CheckBox" parent="Connect"]
margin_left = 228.0
margin_top = 88.0
margin_right = 309.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 1 )
pressed = true
text = "Rede Local"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 240.0
margin_bottom = 144.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 3 )
window_title = "Alerta"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -320.0
margin_top = -180.0
margin_right = 320.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverTitle" type="Label" parent="GameOver"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -56.0
margin_top = 64.0
margin_right = 56.0
margin_bottom = 88.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "Fim de jogo!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinnerLabel" type="Label" parent="GameOver"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -56.0
margin_top = 120.0
margin_right = 56.0
margin_bottom = 144.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "(fulano) venceu!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgain" type="Button" parent="GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = 4.0
margin_right = 136.0
margin_bottom = 42.0
theme = ExtResource( 3 )
text = "JOGAR NOVAMENTE (trocar personagens)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnToMenu" type="Button" parent="GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.0
margin_top = 76.0
margin_right = 109.0
margin_bottom = 114.0
theme = ExtResource( 3 )
text = "VOLTAR AO MENU"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Players/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Connect/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Connect/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="GameOver/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="GameOver/ReturnToMenu" to="." method="_on_ReturnToMenu_pressed"]
